--- a/app/css/_header.scss
+++ b/app/css/_header.scss
@@ -32,6 +32,7 @@ $html-font-size: 16px;
   height: 42px;
   position: absolute;
   background-image: url(../images/bg/Airpods-bg.svg);
+  background-repeat: no-repeat;
   z-index: -1;
   left: -8px;
   bottom: 0;
@@ -68,8 +69,9 @@ $html-font-size: 16px;
 }
 .indeed-preview {
   position: relative;
+  margin-bottom: 85px;
   &-solve {
-    margin-bottom: 205px;
+    max-width: 640px;
     position: relative;
     z-index: 2;
     &-marker {
@@ -98,7 +100,10 @@ $html-font-size: 16px;
       line-height: 180%;
       color: #cdd3fa;
       margin-bottom: 46px;
+      max-width: 440px;
     }
+  }
+  &-btn {
     &-resume {
       width: 308px;
       height: 70px;
@@ -109,8 +114,14 @@ $html-font-size: 16px;
       font-size: rem(20px);
       font-weight: 600;
       margin-right: 21px;
+      border: 1px solid #ffffff00;
+      transition: 0.3s ease;
       img {
         vertical-align: middle;
+      }
+      &:hover {
+        border: 1px solid #ffffff;
+        background: #ffab36;
       }
     }
     &-solve {
@@ -123,31 +134,57 @@ $html-font-size: 16px;
       font-size: rem(20px);
       font-weight: 600;
       margin-right: 21px;
+      border: 1px solid #eba54400;
+      transition: 0.3s ease;
       img {
         vertical-align: middle;
+      }
+      &:hover {
+        background: #fafafa;
+        border: 1px solid #eba544;
       }
     }
   }
   &-persone {
-    position: absolute;
-    top: -89px;
-    right: -103px;
+    position: relative;
+    &-teen {
+      position: absolute;
+      z-index: 2;
+      top: -86px;
+      left: -84px;
+      width: 653px;
+    }
+    &-stars {
+      &__left {
+        position: absolute;
+        top: 41px;
+        left: -66px;
+      }
+      &__top {
+        position: absolute;
+        top: -45px;
+        right: -45px;
+      }
+      &__right {
+        position: absolute;
+        top: 181px;
+        right: -165px;
+      }
+    }
   }
-  &-stars {
-    &-left {
-      position: absolute;
-      top: 42px;
-      right: 441px;
-    }
-    &-top {
-      position: absolute;
-      top: -47px;
-      right: -45px;
-    }
-    &-right {
-      position: absolute;
-      top: 181px;
-      right: -165px;
-    }
-  }
+}
+
+.grid-item1 {
+  grid-column: 1 / 4;
+  grid-row: 1 / 5;
+}
+
+.grid-item2 {
+  grid-column: 1 / 4;
+  grid-row: 5 / 6;
+}
+
+.grid-item3 {
+  grid-column: 4 / 6;
+  grid-row: 1/6;
 }
