--- a/app/css/_media.scss
+++ b/app/css/_media.scss
@@ -15,6 +15,21 @@
 @media (max-width: 992px) {
   // Generel
   // Header
+
+  .grid-item1 {
+    grid-column: 1 / 6;
+    grid-row: 1 / 3;
+  }
+
+  .grid-item2 {
+    grid-column: 1 / 4;
+    grid-row: 6 / 7;
+  }
+
+  .grid-item3 {
+    grid-column: 1 / 6;
+    grid-row: 3 / 4;
+  }
   // Middle
   // Footer
 }
@@ -36,6 +51,15 @@
 @media (max-width: 400px) {
   // Generel
   // Header
+  .indeed-preview-solve-title {
+    font-size: rem(32px);
+  }
+  .bg-yellow {
+    display: none;
+  }
+  .indeed-preview-persone-teen {
+    width: 443px;
+  }
   // Middle
   // Footer
 }
