--- a/app/css/_grid.scss
+++ b/app/css/_grid.scss
@@ -66,6 +66,16 @@
   margin: -0.5px;
 }
 
+// custom columns
+.popup-col {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.row-popup {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
 /*  12-column */
 
 .col-1 {
