--- a/app/css/_UI.scss
+++ b/app/css/_UI.scss
@@ -78,7 +78,7 @@ textarea {
   padding-left: 64px;
   padding-right: 10px;
   font-size: rem(16px);
-  color: $colorBlack;
+  color: $colorSilver;
   ::placeholder {
     font-family: $ffLexend;
     color: #8b8d9b;
@@ -138,37 +138,57 @@ textarea {
   border-color: #b3d7ff;
 }
 // Answer btn
-.ui-answer-btn {
-  position: relative;
-  border: 1px solid #ebecf5;
-  border-radius: 10px;
-}
-.ui-answer-btn-num {
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-  font-size: rem(16px);
-  font-weight: 600;
-  color: $colorBlack;
-}
+// .ui-answer-btn {
+//   position: relative;
+//   border: 1px solid #ebecf5;
+//   border-radius: 10px;
+// }
+// .ui-answer-btn-num {
+//   position: absolute;
+//   transform: translate(-50%, -50%);
+//   top: 50%;
+//   left: 50%;
+//   font-size: rem(16px);
+//   font-weight: 600;
+//   color: $colorBlack;
+// }
 
-.ui-answer-btn.border > .ui-answer-btn-num {
-  color: red;
-}
-.ui-answer-btn-checkbox {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
+// .ui-answer-btn.border > .ui-answer-btn-num {
+//   color: red;
+// }
+// .ui-answer-btn-checkbox {
+//   position: absolute;
+//   z-index: -1;
+//   opacity: 0;
+// }
 
-.ui-answer-btn-checkbox + .ui-answer-btn-label::before {
-  content: "";
+// .ui-answer-btn-checkbox + .ui-answer-btn-label::before {
+//   content: "";
+//   display: inline-block;
+//   box-sizing: border-box;
+//   width: 100%;
+//   height: 50px;
+//   line-height: 50px;
+// }
+
+// Style input for question.html
+
+input[type="radio"] {
+  display: none;
+}
+.question-label {
   display: inline-block;
-  box-sizing: border-box;
   width: 100%;
   height: 50px;
-  line-height: 50px;
+  text-align: center;
+  line-height: 48px;
+  color: $colorBlack;
+  border: 1.6px solid #ebecf5;
+  border-radius: 10px;
+}
+input[type="radio"]:checked + .question-label {
+  border: 1.6px solid $colorBlue;
+  color: $colorBlue;
 }
 
 input::-webkit-input-placeholder {
