--- a/app/css/_header.scss
+++ b/app/css/_header.scss
@@ -17,7 +17,7 @@ $html-font-size: 16px;
   background-image: url(../images/bg/section-bg.svg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center top;
+  background-position: center bottom;
   margin-bottom: 132px;
 }
 
@@ -143,32 +143,34 @@ $html-font-size: 16px;
   }
   &-persone {
     position: relative;
+    margin-right: -100px;
+    margin-left: -63px;
     &-teen {
       background-image: url(../images/teen+bg.svg);
       background-repeat: no-repeat;
       background-size: cover;
-      position: absolute;
+      position: relative;
       z-index: 2;
       top: -86px;
-      left: -84px;
-      width: 653px;
+      left: -23px;
+      width: 100%;
       height: 670px;
     }
     &-stars {
       &__left {
         position: absolute;
         top: 41px;
-        left: -66px;
+        left: -5px;
       }
       &__top {
         position: absolute;
         top: -45px;
-        right: -45px;
+        right: 57px;
       }
       &__right {
         position: absolute;
         top: 181px;
-        right: -165px;
+        right: -63px;
       }
     }
   }
@@ -176,12 +178,12 @@ $html-font-size: 16px;
 
 .grid-item1 {
   grid-column: 1 / 4;
-  grid-row: 1 / 5;
+  grid-row: 1 / 4;
 }
 
 .grid-item2 {
   grid-column: 1 / 4;
-  grid-row: 5 / 6;
+  grid-row: 4 / 6;
 }
 
 .grid-item3 {
