--- a/app/css/_media.scss
+++ b/app/css/_media.scss
@@ -122,6 +122,10 @@
   .bg-header-bg-item5 {
     display: none;
   }
+  .bg-header-bg {
+    border-bottom-right-radius: 100% 10%;
+    border-bottom-left-radius: 100% 10%;
+  }
   // Middle
   .steps-item-img {
     margin-bottom: 0px;
